--- a/_data/menu.yml
+++ b/_data/menu.yml
@@ -2,15 +2,13 @@
 # https://github.com/riggraz/no-style-please#customize-the-menu
 
 entries:
-  - title: aboutme.sh
+  - title: about.sh
     entries:
       - title: $whoami
         entries:
-        - title: Hello! I'm John Trigg, but I go by Jack!
-
-      - title: \&curl github.com
-      - title: Here's my Github!
-        url: https://github.com/johntrigg
+          - title: Hello! My name is John Trigg, but I go by Jack!
+          - title: I'm a cybersecurity student at the University of South Florida.
+          - title: I have a huge interest in all things computer security, and love playing in CTF's!
 
   - title: all posts
     post_list:
@@ -40,3 +38,11 @@ entries:
           - title: with subsubitems
           - title: example page
             url: about
+
+  - title: about.sh
+    entries:
+      - title: $whoami
+        entries:
+          - title: Hello! My name is John Trigg, but I go by Jack!
+          - title: I'm a cybersecurity student at the University of South Florida.
+          - title: I have a huge interest in all things computer security, and love playing in CTF's!
