--- a/_config.yml
+++ b/_config.yml
@@ -1,7 +1,7 @@
 title: Jack Trigg's Portfolio # name of the site
 author: John Trigg # name of site's author
 email: jtrigg@usf.edu # email of site's author
-url: https://johntrigg.github.io # root address of the site
+url: https://jacktrigg.com # root address of the site
 baseurl: "" # subpath of the site, e.g. "/blog" (leave it blank "" if you're site shouldn't use a subpath)
 description: > # description of the site (multiple lines allowed)
   Hi! I'm John Trigg, but I go by Jack. Here's my website!
@@ -14,7 +14,7 @@ favicon: "logo.png" # name+extension of favicon (which must be put on the root f
 remote_theme: riggraz/no-style-please # if you are using GitHub Pages, change it to remote_theme: riggraz/no-style-please
 
 theme_config:
-  appearance: "auto" # can be "light", "dark" or "auto"
+  appearance: "dark" # can be "light", "dark" or "auto"
   back_home_text: ".." # customize text for homepage link in post layout
   date_format: "%Y-%m-%d" # customize how date is formatted
   show_description: false # show blog description in home page
