--- a/_data/menu.yml
+++ b/_data/menu.yml
@@ -24,6 +24,20 @@ entries:
       show_more_text: See more posts...
       show_more_url: example2-archive.html
 
+  - title: Writeups
+    post_list:
+      category: example2
+      show_more: true
+      show_more_text: See more posts...
+      show_more_url: example2-archive.html
+
+  - title: Blog Posts
+    post_list:
+      category: example2
+      show_more: true
+      show_more_text: See more posts...
+      show_more_url: example2-archive.html
+
   - title: rss
     url: feed.xml
   
