Sample posts and uploading assets

--- a/_data/menu.yml
+++ b/_data/menu.yml
@@ -33,7 +33,7 @@ entries:
 
   - title: Blog Posts
     post_list:
-      category: example2
+      category: blog-posts
       show_more: true
       show_more_text: See more posts...
       show_more_url: example2-archive.html
