--- a/_data/menu.yml
+++ b/_data/menu.yml
@@ -26,7 +26,7 @@ entries:
 
   - title: Writeups
     post_list:
-      category: example2
+      category: writeups
       show_more: true
       show_more_text: See more posts...
       show_more_url: example2-archive.html
