--- a/_data/menu.yml
+++ b/_data/menu.yml
@@ -6,7 +6,7 @@ entries:
         entries:
           - title: Hello! My name is John Trigg, but I go by Jack!
           - title: I'm a cybersecurity student at the University of South Florida.
-          - title: I have a huge interest in all things computer security, and love playing in CTF's!
+          - title: I have a huge interest in all things computer security, and love playing in CTFs!
           - title: Check out some of my projects (like this website and CTF automation) on my <a href='https://github.com/johntrigg/'>Github!</a>
 
   - title: Writeups
