--- a/_config.yml
+++ b/_config.yml
@@ -1,4 +1,4 @@
-title: Jack Trigg's Portfolio # name of the site
+title: John 'Jack' Trigg's Website # name of the site
 author: John Trigg # name of site's author
 email: jtrigg@usf.edu # email of site's author
 url: https://jacktrigg.com # root address of the site
