--- a/_data/menu.yml
+++ b/_data/menu.yml
@@ -25,6 +25,14 @@ entries:
       show_more_text: View all blog posts ...
       show_more_url: example2-archive.html
 
+  - title: Cheat Sheet
+    post_list:
+      limit: 10
+      category: cheatsheets
+      show_more: true
+      show_more_text: View all blog posts ...
+      show_more_url: example2-archive.html
+
   - title: all posts
     post_list:
       limit: 100
