--- a/_config.yml
+++ b/_config.yml
@@ -25,3 +25,9 @@ sass:
 plugins:
   - jekyll-feed
   - jekyll-seo-tag
+
+highlighter: none
+markdown: kramdown
+kramdown:
+  syntax_highlighter_opts:
+    disable : true  
