--- a/_data/menu.yml
+++ b/_data/menu.yml
@@ -9,28 +9,12 @@ entries:
           - title: I have a huge interest in all things computer security, and love playing in CTFs!
           - title: Check out some of my projects (like this website and CTF automation) on my <a href='https://github.com/johntrigg/'>Github!</a>
 
-  - title: Writeups
+  - title: Posts
     post_list:
       limit: 10
       category: writeups
       show_more: true
       show_more_text: View all writeups ...
-      show_more_url: example2-archive.html
-
-  - title: Blog Posts
-    post_list:
-      limit: 10
-      category: blogs
-      show_more: true
-      show_more_text: View all blog posts ...
-      show_more_url: example2-archive.html
-
-  - title: Cheat Sheet
-    post_list:
-      limit: 10
-      category: cheatsheets
-      show_more: true
-      show_more_text: View all blog posts ...
       show_more_url: example2-archive.html
 
   - title: $ goals
