--- a/_data/menu.yml
+++ b/_data/menu.yml
@@ -9,7 +9,7 @@ entries:
           - title: I have a huge interest in all things computer security, and love playing in CTFs!
           - title: Check out some of my projects (like this website and CTF automation) on my <a href='https://github.com/johntrigg/'>Github!</a>
 
-  - title: Posts
+  - title: $posts
     post_list:
       limit: 10
       category: writeups
@@ -23,10 +23,10 @@ entries:
         entries:
           - title: OSCP -> CBBH -> CPTS -> OSWE -> OSEP
 
-  - title: all posts
-    post_list:
-      limit: 100
-      show_more: true
-      show_more_text: See archive...
-      show_more_url: archive.html
+#  - title: all posts
+#    post_list:
+#      limit: 100
+#      show_more: true
+#      show_more_text: See archive...
+#      show_more_url: archive.html
   
